--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: 4XL — Excel in everything
+description: Unlock your full potential and excel in anything you wish with our comprehensive tools and resources. 4XL provides everything you need to succeed and achieve your goals.
